.blend file thumbnails doesn't scale up properly on windows #101295

Closed
opened 2022-09-23 12:06:06 +02:00 by Steffen Hartmann · 6 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40

Blender Version
Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: 0759f671ce
Worked: never i guess
Short description of error
.blend file thumbnails doesn't scale properly on windows.
2022-09-23 12-01-17.mp4
Sorry for the weird crop but the problem should be clear. The .blend thumbnail stays rather small compared to the others on max zoom/scale level.

Exact steps for others to reproduce the error

  1. Open windows file browser and move to a folder which contains a .blend file.
  2. Use ctrl + mouse wheel to scale folder and file symbols.

.blend thumbnails doesn't scale all the way up.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.40 **Blender Version** Broken: version: 3.3.0, branch: master, commit date: 2022-09-06 15:39, hash: `0759f671ce` Worked: never i guess **Short description of error** .blend file thumbnails doesn't scale properly on windows. [2022-09-23 12-01-17.mp4](https://archive.blender.org/developer/F13559568/2022-09-23_12-01-17.mp4) Sorry for the weird crop but the problem should be clear. The .blend thumbnail stays rather small compared to the others on max zoom/scale level. **Exact steps for others to reproduce the error** 1. Open windows file browser and move to a folder which contains a .blend file. 2. Use ctrl + mouse wheel to scale folder and file symbols. .blend thumbnails doesn't scale all the way up.

Added subscriber: @Harti

Added subscriber: @Harti
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

The thumbnail images that are stored inside the Blend files are 128x128, while the largest thumbnails that Windows supports is 256x256. So it is possible, as shown in the video above, to request thumbnails than are larger than we provide.

However, we might be able to do things a bit better. When GetThumbnail is called we are provided a cx UNIT value for the "maximum thumbnail size, in pixels. The Shell draws the returned bitmap at this size or smaller... The Shell scales the bitmap to render at lower sizes.". There is a further guideline about scaling that says "Windows Vista is responsible for scaling down or down sampling images. If your handler is asked for a larger image than you have available, provide the closest size you have. Do not attempt to dynamically resize your own image."

The passed CX value is only provided for cases where we can choose to select from multiple thumbnails to give the best one.

Instead we currently use that value to scale down our thumbnail if the requested size is less than 128, which is not recommended practice. We could instead just scale up the image to CX value if too small, but leave alone (do not scale down) if larger than requested.

The thumbnail images that are stored inside the Blend files are 128x128, while the largest thumbnails that Windows supports is 256x256. So it is possible, as shown in the video above, to request thumbnails than are larger than we provide. However, we might be able to do things a bit better. When `GetThumbnail` is called we are provided a `cx` UNIT value for the "maximum thumbnail size, in pixels. The Shell draws the returned bitmap at this size or smaller... The Shell scales the bitmap to render at lower sizes.". There is a [further guideline ](https://learn.microsoft.com/en-us/previous-versions/windows/desktop/legacy/cc144115(v=vs.85)) about scaling that says "Windows Vista is responsible for scaling down or down sampling images. If your handler is asked for a larger image than you have available, provide the closest size you have. Do not attempt to dynamically resize your own image." The passed CX value is only provided for cases where we can choose to select from multiple thumbnails to give the best one. Instead we currently use that value to scale **down** our thumbnail if the requested size is *less than* 128, which is not recommended practice. We could instead just scale **up** the image to CX value if too small, but leave alone (do not scale down) if larger than requested.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Harley Acheson self-assigned this 2022-09-23 23:33:42 +02:00

This issue was referenced by ff27b68f41

This issue was referenced by ff27b68f41ce511e162d6e561103c522d9507a5f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101295
No description provided.